--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,97 +1,104 @@
-name: Bug 反馈 (Bug Report)
-description: 创建一个报告以帮助我们修复问题
+name: Bug 反馈 / Bug Report
+description: 创建一个报告以帮助我们修复问题 / Create a report to help us fix issues
 title: "[Bug]: "
 labels: ["bug"]
+assignees:
+  - BnanZ0
+
 body:
-  # --- 1. 这里就是你要的超链接部分 ---
+  # --- 1. 引导信息 / Guide ---
   - type: markdown
     attributes:
       value: |
-        ### 在提交 Issue 之前
+        ### 提交前必读 / Read Before Submitting
         请务必先搜索现有 ISSUE 和查阅常见问题，避免重复汇报。
+        Please search existing issues and check the FAQ to avoid duplicates.
         
-        - 🔍 **搜索现有 ISSUE:** [点击搜索](https://github.com/BnanZ0/ok-duet-night-abyss/issues)
-        - 📖 **常见问题 FAQ:** [点击查看](https://github.com/BnanZ0/ok-duet-night-abyss?tab=readme-ov-file#-%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97%E4%B8%8E-faq)
-        - 💬 **讨论区:** [前往讨论](https://github.com/BnanZ0/ok-duet-night-abyss/discussions)
+        - 🔍 **搜索现有 ISSUE / Search Issues:** [点击搜索 / Click Here](https://github.com/BnanZ0/ok-duet-night-abyss/issues)
+        - 📖 **常见问题 FAQ:** [点击查看 / Click Here](https://github.com/BnanZ0/ok-duet-night-abyss?tab=readme-ov-file#-%E4%BD%BF%E7%94%A8%E6%8C%87%E5%8D%97%E4%B8%8E-faq)
+        - 💬 **讨论区 / Discussions:** [前往讨论 / Go to Discussions](https://github.com/BnanZ0/ok-duet-night-abyss/discussions)
 
-  # --- 2. 问题描述 ---
+  # --- 2. 问题描述 / Description ---
   - type: textarea
     id: description
     attributes:
-      label: 描述这个问题 (Bug)
-      description: 清晰简洁地描述发生的情况。
-      placeholder: 请在此处描述 Bug...
+      label: 描述这个问题 / Description
+      description: 清晰简洁地描述发生的情况。 / A clear and concise description of what happened.
+      placeholder: 请在此处详细描述 Bug... / Describe the bug here...
     validations:
       required: true
 
-  # --- 3. 复现步骤 ---
+  # --- 3. 复现步骤 / Reproduction ---
   - type: textarea
     id: reproduction
     attributes:
-      label: 如何复现
-      description: 请详细列出复现步骤。
+      label: 如何复现 / How to reproduce
+      description: 请详细列出复现步骤。 / Please list the steps to reproduce.
       placeholder: |
-        1. 打开软件...
-        2. 点击设置...
-        3. 看到错误提示...
+        1. 打开软件 / Open the software...
+        2. 点击设置 / Click settings...
+        3. 看到错误提示 / See error message...
     validations:
       required: true
 
-  # --- 4. 是否必现 ---
+  # --- 4. 是否必现 / Probability ---
   - type: dropdown
     id: probability
     attributes:
-      label: 是否必现
+      label: 是否必现 / Is it reproducible?
       options:
-        - 是
-        - 否
-        - 大概率
-        - 小概率
+        - 是 (Always)
+        - 否 (Once)
+        - 大概率 (Often)
+        - 小概率 (Rarely)
     validations:
       required: true
 
-  # --- 5. 截图、日志和录屏 (上传区域) ---
+  # --- 5. 附件上传 / Attachments ---
   - type: textarea
     id: attachments
     attributes:
-      label: 截图、日志和录屏
+      label: 截图、日志和录屏 / Screenshots, Logs & Recordings
       description: |
-        **上传方式：** 
-        1. 将图片或视频文件直接 **拖拽** 到下方文本框中。
-        2. 日志内容可以直接粘贴，或将 `.log` 文件拖拽上传。
-        3. 也可以使用剪贴板粘贴图片 (Ctrl+V)。
-      placeholder: 请将截图、屏幕录像或日志文件拖放到此处...
+        **上传方式 / How to upload:**
+        1. 将图片、视频或 `.log` 文件直接 **拖拽** 到下方文本框中。
+        2. 也可以使用剪贴板粘贴图片 (Ctrl+V)。
+        
+        **Drag & Drop** images, videos, or `.log` files into the text area below, or paste directly.
+      placeholder: 请将截图、屏幕录像或日志文件拖放到此处... / Drag and drop screenshots, recordings, or logs here...
     validations:
       required: false
 
-  # --- 6. 版本信息 (一行两个，更紧凑) ---
+  # --- 6. 版本信息 / Versions ---
   - type: input
     id: version
     attributes:
-      label: ok-dna出现bug的版本
-      placeholder: 例如：1.0.1
+      label: ok-dna 出现 bug 的版本 / Buggy Version
+      placeholder: e.g. 1.0.1
     validations:
       required: true
 
   - type: input
     id: last_working_version
     attributes:
-      label: ok-dna最近未出现bug的版本 (选填)
-      placeholder: 例如：1.0.0
+      label: ok-dna 最近未出现 bug 的版本 / Last Working Version
+      placeholder: e.g. 1.0.0
+    validations:
+      required: false
 
   - type: input
     id: os_version
     attributes:
-      label: Windows 操作系统版本
-      placeholder: 例如：Windows 11 Pro 23H2 22631.3593
+      label: Windows 操作系统版本 / Windows OS Version
+      placeholder: e.g. Windows 11 Pro 23H2 22631.3593
     validations:
       required: false
 
-  # --- 7. 补充信息 ---
+  # --- 7. 补充信息 / Additional Context ---
   - type: textarea
     id: additional
     attributes:
-      label: 其他补充内容
-      placeholder: 在这里添加关于该问题的任何其他背景信息...
+      label: 其他补充内容 / Additional Context
+      placeholder: 在这里添加关于该问题的任何其他背景信息... / Add any other context about the problem here...
     validations:
       required: false
